<resources>
    <string name="app_name">Technical Test 2</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_uppercase">LOGIN</string>
    <string name="please_login_with_your_credential">Please login with your credential.</string>
    <string name="student_app">Student App</string>
    <string name="profile_picture">Profile picture</string>
    <string name="address">Address</string>
    <string name="list_of_students">List of Students</string>
    <string name="search">Search…</string>
</resources>