<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/dark_red">

    <!--    Application Logo    -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/student_app"
        android:src="@drawable/student_app_logo"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Application Title    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/student_app"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!--    Form Layout    -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:background="@color/white"
        app:cardCornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="32dp"
            android:paddingBottom="80dp">

            <!--    Heading    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/red"
                android:textSize="28sp"
                android:textStyle="bold" />

            <!--    Subheading    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/please_login_with_your_credential"
                android:textSize="12sp" />

            <!--    Username Title    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:alpha="0.7"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!--    Username Input    -->
            <EditText
                android:id="@+id/username_form"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:alpha="0.7"
                android:autofillHints="username"
                android:inputType="text"
                android:labelFor="@+id/username_form"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:letterSpacing="0.01"
                tools:text="alfagift-admin" />

            <!--    Password Title    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:alpha="0.7"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <!--    Password Form    -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--    Input Password    -->
                <EditText
                    android:id="@+id/password_form"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:alpha="0.7"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:labelFor="@+id/password_form"
                    android:letterSpacing="0.175"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:paddingEnd="48dp"
                    tools:text="asdf" />

                <!--    Password Visibility Toggle    -->
                <ImageButton
                    android:id="@+id/password_toggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/password"
                    android:src="@drawable/visibility_off" />

            </RelativeLayout>

            <!--    Login Button    -->
            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="28dp"
                android:backgroundTint="@color/gray"
                android:text="@string/login_uppercase" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
